@@ -97,6 +97,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -184,6 +185,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -269,6 +271,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -336,6 +339,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -408,6 +412,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         autoFollowPatterns.put("pattern_1", new AutoFollowPattern(
                 remoteCluster,
                 List.of("logs-*", "test-*"),
+                Collections.emptyList(),
                 "copy-",
                 Settings.EMPTY,
                 false,
@@ -425,7 +430,9 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         );
         autoFollowPatterns.put("pattern_2", new AutoFollowPattern(
                 remoteCluster,
-                List.of("users-*"), "copy-",
+                List.of("users-*"),
+                Collections.emptyList(),
+                "copy-",
                 Settings.EMPTY,
                 false,
                 null,
@@ -660,6 +667,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY, true,
             null,
@@ -734,6 +742,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         final AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("metrics-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -804,6 +813,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         final AutoFollowPattern inactiveAutoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("metrics-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             false,
@@ -830,6 +840,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -885,6 +896,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         final AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1023,6 +1035,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("metrics-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1042,6 +1055,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("metrics-*"),
+            Collections.emptyList(),
             "eu-metrics-0",
             Settings.EMPTY,
             true,
@@ -1061,6 +1075,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("metrics-*"),
+            Collections.emptyList(),
             "eu-{{leader_index}}",
             Settings.EMPTY,
             true,
@@ -1158,6 +1173,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             "pattern1", new AutoFollowPattern(
                 "remote1",
                 Collections.singletonList("logs-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1178,6 +1194,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             new AutoFollowPattern(
                 "remote2",
                 Collections.singletonList("logs-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1198,6 +1215,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             new AutoFollowPattern(
                 "remote2",
                 Collections.singletonList("metrics-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1242,6 +1260,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             new AutoFollowPattern(
                 "remote1",
                 Collections.singletonList("metrics-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1336,6 +1355,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             new AutoFollowPattern(
                 "remote1",
                 Collections.singletonList("logs-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1355,6 +1375,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             "pattern2",
             new AutoFollowPattern("remote2",
                 Collections.singletonList("logs-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1374,6 +1395,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             "pattern3",
             new AutoFollowPattern("remote2",
                 Collections.singletonList("metrics-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1409,6 +1431,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             (name, pattern) -> new AutoFollowPattern(
                 pattern.getRemoteCluster(),
                 pattern.getLeaderIndexPatterns(),
+                pattern.getLeaderIndexExclusionPatterns(),
                 pattern.getFollowIndexPattern(),
                 Settings.EMPTY,
                 false,
@@ -1428,6 +1451,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             "pattern3",
             (name, pattern) -> new AutoFollowPattern(pattern.getRemoteCluster(),
                 pattern.getLeaderIndexPatterns(),
+                pattern.getLeaderIndexExclusionPatterns(),
                 pattern.getFollowIndexPattern(),
                 Settings.EMPTY,
                 false,
@@ -1459,6 +1483,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             new AutoFollowPattern(
                 "remote1",
                 Collections.singletonList("metrics-*"),
+                Collections.emptyList(),
                 null,
                 Settings.EMPTY,
                 true,
@@ -1478,6 +1503,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             "pattern2",
             (name, pattern) -> new AutoFollowPattern(pattern.getRemoteCluster(),
                 pattern.getLeaderIndexPatterns(),
+                pattern.getLeaderIndexExclusionPatterns(),
                 pattern.getFollowIndexPattern(),
                 Settings.EMPTY,
                 false,
@@ -1523,6 +1549,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1601,6 +1628,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1674,6 +1702,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1755,6 +1784,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern(
             "remote",
             Collections.singletonList("logs-*"),
+            Collections.emptyList(),
             null,
             Settings.EMPTY,
             true,
@@ -1853,6 +1883,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         final AutoFollowPattern pattern = new AutoFollowPattern(
             "remote",
             List.of("*"),
+            Collections.emptyList(),
             "{}",
             Settings.EMPTY,
             true,
@@ -1934,6 +1965,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
                             new AutoFollowPattern(
                                 "remote",
                                 List.of("docs-*"),
+                                Collections.emptyList(),
                                 null,
                                 Settings.EMPTY,
                                 true,
@@ -2016,6 +2048,110 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             boolean expect = index.value.getState() == IndexMetadata.State.OPEN;
             assertThat(results.get(0).autoFollowExecutionResults.containsKey(index.value.getIndex()), is(expect));
             assertThat(followedIndices.contains(index.key), is(expect));
+        }
+    }
+
+    @AwaitsFix(bugUrl = "https://github.com/elastic/elasticsearch/issues/73797")
+    public void testExcludedPatternIndicesAreNotAutoFollowed() {
+        final Client client = mock(Client.class);
+        when(client.getRemoteClusterClient(anyString())).thenReturn(client);
+
+        final String pattern = "pattern1";
+        final ClusterState localState = ClusterState.builder(new ClusterName("local"))
+            .metadata(Metadata.builder()
+                .putCustom(AutoFollowMetadata.TYPE,
+                    new AutoFollowMetadata(
+                        Map.of(
+                            pattern,
+                            new AutoFollowPattern(
+                                "remote",
+                                List.of("docs-*"),
+                                List.of("docs-excluded-*"),
+                                null,
+                                Settings.EMPTY,
+                                true,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null,
+                                null
+                            )
+                        ),
+                        Map.of(pattern, List.of()),
+                        Map.of(pattern, Map.of()))))
+            .build();
+
+        ClusterState remoteState = null;
+        final int nbLeaderIndices = randomIntBetween(0, 15);
+        for (int i = 0; i < nbLeaderIndices; i++) {
+            String indexName = "docs-" + i;
+            if (remoteState == null) {
+                remoteState = createRemoteClusterState(indexName, true);
+            } else {
+                remoteState = createRemoteClusterState(remoteState, indexName);
+            }
+        }
+
+        final int nbLeaderExcludedIndices = randomIntBetween(1, 15);
+        for (int i = 0; i < nbLeaderExcludedIndices; i++) {
+            String indexName = "docs-excluded-" + i;
+            remoteState = createRemoteClusterState(remoteState, indexName);
+        }
+
+        final ClusterState finalRemoteState = remoteState;
+        final AtomicReference<ClusterState> lastModifiedClusterState = new AtomicReference<>(localState);
+        final List<AutoFollowCoordinator.AutoFollowResult> results = new ArrayList<>();
+        final Set<Object> followedIndices = ConcurrentCollections.newConcurrentSet();
+        final AutoFollower autoFollower =
+            new AutoFollower("remote", results::addAll, localClusterStateSupplier(localState), () -> 1L, Runnable::run) {
+                @Override
+                void getRemoteClusterState(String remoteCluster,
+                                           long metadataVersion,
+                                           BiConsumer<ClusterStateResponse, Exception> handler) {
+                    assertThat(remoteCluster, equalTo("remote"));
+                    handler.accept(new ClusterStateResponse(new ClusterName("remote"), finalRemoteState, false), null);
+                }
+
+                @Override
+                void createAndFollow(Map<String, String> headers,
+                                     PutFollowAction.Request followRequest,
+                                     Runnable successHandler,
+                                     Consumer<Exception> failureHandler) {
+                    followedIndices.add(followRequest.getLeaderIndex());
+                    successHandler.run();
+                }
+
+                @Override
+                void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction, Consumer<Exception> handler) {
+                    lastModifiedClusterState.updateAndGet(updateFunction::apply);
+                    handler.accept(null);
+                }
+
+                @Override
+                void cleanFollowedRemoteIndices(ClusterState remoteClusterState, List<String> patterns) {
+                    // Ignore, to avoid invoking updateAutoFollowMetadata(...) twice
+                }
+            };
+        autoFollower.start();
+
+        assertThat(results, notNullValue());
+        assertThat(results.size(), equalTo(1));
+
+        AutoFollowMetadata autoFollowMetadata = lastModifiedClusterState.get().metadata().custom(AutoFollowMetadata.TYPE);
+        final List<String> autoFollowedIndices = autoFollowMetadata.getFollowedLeaderIndexUUIDs().get(pattern);
+        assertThat(autoFollowedIndices.size(), equalTo(nbLeaderIndices));
+
+        for (ObjectObjectCursor<String, IndexMetadata> index : remoteState.metadata().indices()) {
+            final Index remoteIndex = index.value.getIndex();
+            boolean followed = remoteIndex.getName().startsWith("docs-excluded") == false;
+            assertThat(results.get(0).autoFollowExecutionResults.containsKey(index.value.getIndex()), is(followed));
+            assertThat(followedIndices.contains(index.key), is(followed));
+            assertThat(autoFollowedIndices.contains(remoteIndex.getUUID()), equalTo(followed));
         }
     }
 
